[gd_scene load_steps=3 format=2]

[ext_resource path="res://Ships/Reklack Ship.png" type="Texture" id=1]
[ext_resource path="res://Ships/Reklack.gd" type="Script" id=2]

[node name="Reklack" type="KinematicBody2D"]
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 16, 0 )
rotation = 1.5708
scale = Vector2( 3, 3 )
texture = ExtResource( 1 )

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="."]
visible = false
position = Vector2( 16, 0 )
rotation = 1.5708
scale = Vector2( 3, 3 )
polygon = PoolVector2Array( 1.5, -9.5, 2.5, -9.5, 2.5, -7.5, 3.5, -7.5, 3.5, -0.5, 4.5, -0.5, 4.5, 4.5, 3.5, 4.5, 3.5, 5.5, 4.5, 5.5, 4.5, 7.5, 6.6, 7.5, 7.4, 2.5, 6.5, 2.5, 6.5, -1.5, 7.5, -1.5, 7.5, -5.5, 10.5, -5.5, 10.5, -1.5, 11.5, -1.5, 11.5, 2.5, 10.5, 2.5, 10.5, 4.5, 11.4, 4.5, 12.6, 9.5, 11.5, 9.5, 11.5, 10.5, 9.5, 10.5, 9.5, 11.5, 6.5, 11.5, 6.5, 12.5, 2.5, 12.5, 2.5, 13.5, -2.5, 13.5, -2.5, 12.5, -6.5, 12.5, -6.5, 11.5, -9.5, 11.5, -9.5, 10.5, -11.5, 10.5, -11.5, 9.5, -12.5, 9.5, -12.5, 6.5, -11.5, 6.5, -11.5, 4.5, -10.5, 4.5, -10.5, 2.5, -11.5, 2.5, -11.5, -1.5, -10.5, -1.5, -10.5, -5.5, -7.5, -5.5, -7.5, -1.5, -6.5, -1.5, -6.5, 2.5, -7.5, 2.5, -7.5, 4.5, -6.5, 4.5, -6.5, 7.5, -4.5, 7.5, -4.5, 5.5, -3.5, 5.5, -3.5, 4.5, -4.5, 4.5, -4.5, -0.5, -3.5, -0.5, -3.5, -7.5, -2.5, -7.5, -2.5, -9.5, -1.5, -9.5, -1.5, -11.5, 1.5, -11.5 )

[node name="MagnetMineCooldown" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="PowerCore" type="Timer" parent="."]
wait_time = 0.6
autostart = true
[connection signal="timeout" from="MagnetMineCooldown" to="." method="_on_MagnetMineCooldown_timeout"]
[connection signal="timeout" from="PowerCore" to="." method="_on_PowerCore_timeout"]
